# nkernels

./: CMakeLists.txt
benchmarks/: README.md  benchmark_specs.py  compare_ops.py  run_repo_compare.sh
csrc/: README.md
csrc/architecture/compound/: scaled_gemm_dispatch.cu  scaled_gemm_dispatch.hpp
csrc/core/: error.hpp  kernel_contract.hpp  performance_model.hpp  scalar_type.hpp
csrc/extensions/: api_surface.cpp  api_surface.hpp  generated_legacy_api_manifest.inc  registry.cpp  registry.hpp
csrc/hardware_architecture/: device_profile.cu  device_profile.hpp  runtime_compat.hpp
csrc/quantization/: policy.hpp
reports/: legacy_migration_status.md
tools/: report_migration_gap.sh  sync_legacy_api_manifest.sh
